--- a/Team Commands.csproj
+++ b/Team Commands.csproj
@@ -27,19 +27,25 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Users\Zak\Desktop\build\</OutputPath>
+    <OutputPath>C:\Dev\Terraria\Team-Commands\bin\Debug</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+      <HintPath>..\TShock4.4.0_Pre15_Terraria1.4.1.2\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.2.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Desktop\TShock\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="OTAPI">
       <HintPath>..\..\..\Desktop\TShock\OTAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="OTAPI, Version=1.4.1.2, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\TShock4.4.0_Pre15_Terraria1.4.1.2\OTAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,8 +57,14 @@
     <Reference Include="TerrariaServer">
       <HintPath>..\..\..\Desktop\TShock\TerrariaServer.exe</HintPath>
     </Reference>
+    <Reference Include="TerrariaServer, Version=1.4.1.2, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\TShock4.4.0_Pre15_Terraria1.4.1.2\TerrariaServer.exe</HintPath>
+    </Reference>
     <Reference Include="TShockAPI">
       <HintPath>..\..\..\Desktop\TShock\ServerPlugins\TShockAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="TShockAPI, Version=4.4.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\TShock4.4.0_Pre15_Terraria1.4.1.2\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
